--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   "homepage": "https://github.com/VeysonD/csp-report#readme",
   "dependencies": {
     "@babel/core": "^7.1.2",
-    "@types/helmet": "0.0.42",
+    "@types/koa-helmet": "^3.1.2",
     "@types/next": "^7.0.3",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/uuid": "^3.4.4",
     "@zeit/next-typescript": "^1.1.1",
     "babel-loader": "^8.0.4",
-    "helmet": "^3.14.0",
     "koa": "^2.6.1",
+    "koa-better-body": "^3.0.4",
     "koa-router": "^7.4.0",
     "next": "^7.0.2",
     "react": "^16.6.0",
