--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/VeysonD/csp-report#readme",
   "dependencies": {
     "@babel/core": "^7.1.2",
+    "@google-cloud/bigquery": "^2.0.1",
     "@types/koa-helmet": "^3.1.2",
     "@types/next": "^7.0.3",
     "@types/react": "^16.4.18",
