--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "dotenv": "^6.1.0",
     "nodemon": "^1.18.5",
     "ts-node": "^7.0.1"
   }
